--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -593,4 +593,23 @@ config PN544
 	help
 	  NXP PN544 Near Field Communication controller support.
 
+config GENERIC_BLN
+       bool "Generic BLN support for backlight notification"
+       default y
+       help
+         Say Y here to enable the backlight notification
+         for android led-notification (modified liblight needed)
+
+config BLD
+       bool "Support for Backlight Dimmer"
+       default y
+       help
+         Say Y here to enable Backlight Dimmer
+
+config TOUCH_WAKE
+       bool "Support for Touch Wake"
+       default y
+       help
+         Say Y here to enable Touch Wake
+
 endif # MISC_DEVICES
